[tool.poetry]
name = "gosb"
version = "0.0.1"
description = ""
authors = ["Martin <martin@dul.li>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]


[tool.black]
line-length = 99

[tool.isort]
profile = "black" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
