[tool.poetry]
name = "bbycrgo"
version = "0.0.1"
description = ""
authors = ["Martin <martin@dul.li>"]

[tool.poetry.dependencies]
python  = ">=3.6.2,<4.0"
python-dotenv = "^0.19.2"
toml = "^0.10.2"
rich = "^11.2.0"
typer = "^0.4.0"
ffmpeg-normalize = "^1.22.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
