[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python  = ">=3.9,<4.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
rich = "^13.9.4"
typer = "^0.15.1"
ffmpeg-normalize = "^1.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
